[package]
name = "fast_levenshtein"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fast_levenshtein"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.22.0"
smallvec = "1.13.2"
unicode-segmentation = "1.11.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1